# discrimination.rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: discrimination.rs  discriminator.rs  lib.rs  split_either.rs
