[package]
name = "discrimination"
version = "0.0.1"
authors = ["Alexander Ronald Altman <alexanderaltman@me.com>"]
description = "Generic worst-case-linear-time sorting and partitioning algorithms based on discriminators"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/pthariensflame/discrimination.rs"
repository = "https://github.com/pthariensflame/discrimination.rs"
documentation = "https://docs.rs/crate/discrimination"
keywords = ["discriminators", "sorting", "partitioning", "generic", "algorithms"]

[lib]
name = "discrimination"
path = "src/lib.rs"

[dependencies]
either = "^1.0.2"
cfg-if = "^0.1.0"
